# rust-deps-bookkeeping

./: .gitignore  Cargo.toml  DEV_GUIDE.md  README.md  ownership.md  package.json
npm/: preinstall.js
scripts/: build-releases.sh  postinstall.js  preinstall.js
src/: deprecated.rs  get_pkg_info.rs  main.rs  old.rs  package_json.rs  package_json_parser.rs  registry.rs  types.rs  vulnerability_fix.rs
src/deprecated/: README.md  mod.rs  tests.rs
src/registry/: README.md  mod.rs  tests.rs
test-assets/: package-lock.json  package.json
test-assets/monorepo/: package-lock.json  package.json
test-assets/monorepo/backend/: package.json
test-assets/monorepo/common/: package.json
test-assets/monorepo/frontend/: package.json
